fix: horizontal sections alignment, contact button end alignment on large screens, & mobile nav text colors

--- a/src/assets/css/abstracts/globals.css
+++ b/src/assets/css/abstracts/globals.css
@@ -11,6 +11,10 @@
     @apply xl:w-[80%] mx-auto xs:w-full sm:w-full h-full;
 }
 
+.text-balance{
+  text-wrap: balance;
+}
+
 .swiper {
     width: 100%;
     height: 60%;
